Add fix to warning when running unit test